[gd_scene load_steps=8 format=3 uid="uid://ec2iu4a6f3mf"]

[ext_resource type="Script" uid="uid://cwssn13aabkk1" path="res://scripts/player_2.gd" id="1_xuxxf"]
[ext_resource type="PackedScene" uid="uid://gw27gms06jj0" path="res://scenes/playerScenes/playerUI.tscn" id="2_8dcr5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pssrb"]
height = 2.87251

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7dkfn"]
radius = 0.429022
height = 1.64591

[sub_resource type="Animation" id="Animation_j7i8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.739211, -1.33995)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_7dkfn"]
resource_name = "finaleCamera"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.739211, -1.33995), Vector3(0, 6.08524, -4.69887), Vector3(0, 13.9362, -4.69887)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.728169, 0, 0), Vector3(-0.234695, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_78b7v"]
_data = {
&"RESET": SubResource("Animation_j7i8f"),
&"finaleCamera": SubResource("Animation_7dkfn")
}

[node name="player2" type="CharacterBody3D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_xuxxf")

[node name="standingCollide" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.966512, 0)
shape = SubResource("CapsuleShape3D_pssrb")

[node name="crouchingCollide" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.355522, 0)
visible = false
shape = SubResource("CapsuleShape3D_7dkfn")

[node name="body" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.14201, 1.36994)

[node name="Camera3D" type="Camera3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.739211, -1.33995)
current = true

[node name="bbRay" type="RayCast3D" parent="body/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.00455737, -0.61077)
visible = false
target_position = Vector3(0, -50, 0)
collision_mask = 3

[node name="PlayerUI" parent="." instance=ExtResource("2_8dcr5")]

[node name="crouchCamera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.736917, 0)

[node name="standCamera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.87763, 0)

[node name="crouchDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="crouchRay" type="RayCast3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 1.42268, 0)

[node name="shootDelay" type="Timer" parent="."]
wait_time = 1.8
one_shot = true

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_78b7v")
}

[connection signal="timeout" from="crouchDelay" to="." method="_on_crouch_delay_timeout"]
[connection signal="timeout" from="shootDelay" to="." method="_on_shoot_delay_timeout"]
